<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >


    <TextView
        android:id="@+id/newCustTitle"
        style="@style/WhiteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="@dimen/margin_b_50"
        android:gravity="center_horizontal"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >
        <Button
            android:id="@+id/custList"
            android:layout_width="@dimen/button_250"
            android:layout_height="@dimen/button_80"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:onClick="to_customer_list"
            android:text="@string/customers" />

        <Button
            android:id="@+id/newCust"
            android:layout_width="@dimen/button_250"
            android:layout_height="@dimen/button_80"
            android:onClick="to_new_costumer"
            android:text="@string/new_customer" />

    </LinearLayout>



</LinearLayout>