<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".NewCustomerActivity"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            style="@style/WhiteText"
            android:id="@+id/newCustTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:layout_marginTop="@dimen/margin_b_20"
            android:textSize="30sp"
            android:text="@string/reg_title"
            />

        <EditText
            android:id="@+id/newCustName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/Name" />


        <Spinner
            android:id="@+id/partySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:textColor="@color/white"
            >
        </Spinner>

        <Spinner
            android:id="@+id/statusSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:textColor="@color/white"

            >
        </Spinner>

        <Spinner
            android:id="@+id/paymentSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:textColor="@color/white"
            >
        </Spinner>


        <EditText
            android:id="@+id/newCustStatusRe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:ems="10"
            android:maxLines="3"
            android:inputType="textMultiLine"
            android:hint="@string/Status_reason"/>


        <Button
            android:id="@+id/validStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:onClick="valid_start"
            android:text="@string/valid_start"
            android:textColor="@color/white"
            android:backgroundTint="@color/material_on_surface_stroke"
            />

        <EditText
            android:id="@+id/startText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:ems="10"
            android:maxLines="3"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

        <Button
            android:id="@+id/validEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:onClick="valid_end"
            android:text="@string/valid_end"
            android:textColor="@color/white"
            android:backgroundTint="@color/material_on_surface_stroke"
            />
        <EditText
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:id="@+id/endText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_b_20"
            android:ems="10"
            android:maxLines="3"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

        <Button
            android:id="@+id/regCustButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:onClick="register"
            />

        <Button
            android:id="@+id/backButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:onClick="to_back"
            />


    </LinearLayout>
</ScrollView>
